Bug 1059606: Take into account that coerced math builtin calls can be in deadCode; r=luke